# keystream

./: Cargo.toml  LICENSE  Makefile  README.md  com.gauchodsp.keyStream.plist  com.gauchodsp.keystream.plist
.github/workflows/: ci.yml  release.yml
Formula/: keystream.rb
scripts/: build-pkg.sh  install.sh  uninstall.sh
src/: audio.rs  keyboard.rs  main.rs  mapping.rs  voice.rs
tests/: cli.rs
