[package]
name = "keystream"
version = "0.1.0"
edition = "2021"
description = "Plays sounds while you type on your keyboard"
repository = "https://github.com/cucuwritescode/keystream"
license = "MIT"
readme = "README.md"
keywords = ["audio", "keyboard", "synthesiser", "daemon", "macos"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
cpal = "0.15"
device_query = "4.0"
crossbeam-channel = "0.5"
ctrlc = "3.4"
libc = "0.2"
dialoguer = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
